testdata/baselines/reference/submodule/conformance/defaultExportsCannotMerge01.errors.txt
m2.ts(1,20): error TS2307: Cannot find module 'm1' or its corresponding type declarations.


==== m1.ts (0 errors) ====
    export default function Decl() {
        return 0;
    }
    
    export interface Decl {
        p1: number;
        p2: number;
    }
    
    export namespace Decl {
        export var x = 10;
        export var y = 20;
    
        interface I {
        }
    }
    
==== m2.ts (1 errors) ====
    import Entity from "m1"
                       ~~~~
!!! error TS2307: Cannot find module 'm1' or its corresponding type declarations.
    
    Entity();
    
    var x: Entity;
    var y: Entity.I;
    
    Entity.x;
    Entity.y;